--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,11 +2,17 @@
 // colors
 :root {
   // base
-  --font-family: "Open Sans", sans-serif;
+  --font-family: "Manrope", sans-serif;
   --content-width: 1170px;
   --container-offset: 15px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 
   // colors
   --light-color: #fff;
+  --black-color: #101628;
+  --gray-color: #8B8B8F;
+  --light-gray-color: #AFAFB0;
+  --light-green-color: #86C58B;
+  --accent-color: #46A44E;
+  --lighten-gray-color: #CDD2DD;
 }
