--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -12,6 +12,13 @@
   }
 }
 
+// @include desktop
+@mixin desktop {
+  @media (max-width: (1140px)) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media (max-width: (1024px)) {
     @content;
