--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,3 @@
-// @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+@include font-face("Manrope", "Manrope-Medium", 500, normal);
+@include font-face("Manrope", "Manrope-Semibold", 600, normal);
+@include font-face("Manrope", "Manrope-Bold", 700, normal);
