--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -10,15 +10,16 @@ html {
 
 .page {
   height: 100%;
-  font-family: var(--font-family, sans-serif);
+  font-family: var(--font-family);
   -webkit-text-size-adjust: 100%;
 }
 
 .page__body {
   margin: 0;
+  height: 100%;
   min-width: 320px;
-  min-height: 100%;
   font-size: 16px;
+  background-color: #F8F8FB;
 }
 
 img {
@@ -32,7 +33,14 @@ a {
 }
 
 .site-container {
+  display: flex;
+  flex-direction: column;
   overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
+  min-height: 100%;
+}
+
+.main {
+  flex: 1 1 auto;
 }
 
 .is-hidden {
