--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,4 +1,5 @@
 @import "./vendor/normalize";
+@import "../../node_modules/simplebar/dist/simplebar.min";
 
 // стили для модального окна
 // @import "../../node_modules/graph-modal/dist/graph-modal.min"
